# mray

./: .buildinfo  .clangd  .gitignore  README.md  genindex.html  index.html  objects.inv  requirements.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  requirements.doctree
.doctrees/markdown/: building.doctree  glossary.doctree  projectLayout.doctree  usage.doctree
.github/workflows/: sphinx.yml
CMake/: CMakeLists.txt  CMakePresets.json  CompilerOptions.cmake  Macros.cmake  NVCCCompilePTX.cmake  PreventInSourceBuilds.cmake
CMake/Core/: CMakeLists.txt
CMake/Device/: CMakeLists.txt
CMake/Docs/: CMakeLists.txt
CMake/Ext/: CMakeLists-DearImGUI.cmake  CMakeLists-ImGUITexInspect.cmake  CMakeLists.txt  DownloadDearImGUI.cmake  DownloadImGUITexInspect.cmake  ExtDownloadDeps.cmake  cli11_fix_nested_footer_print.patch
CMake/Ext/oiio/: CMakeLists-pystring.cmake  CMakeLists.txt  libtiff_remove_cmath.patch  occio_add_config_to_pystring.patch  oiio_change_old_png_include.patch  oiio_size_change.patch
CMake/Ext/usd/: CMakeLists.txt  usd_fix_pair_template_instantiation.patch
CMake/GFGConverter/: CMakeLists.txt
CMake/ImageLoader/: CMakeLists.txt
CMake/Include/: AddPCH.cmake  ChangeDeviceSourceFileLanguage.cmake  CompilerOptions.cmake  FindOPTIX.cmake  GenDeviceTarget.cmake  GenTracerDLLTarget.cmake  GenTracerTarget.cmake  GenTracerTypesAndKernels.cmake  HIPFileExtExtras.cmake  Macros.cmake  NVCCCompilePTX.cmake
CMake/Lib/: CMakeLists.txt
CMake/MRay/: CMakeLists.txt
CMake/MRayInput/: CMakeLists.txt
CMake/MeshLoader/: CMakeLists.txt
CMake/PrecompiledHeaders/: CMakeLists.txt
CMake/SceneLoaderMRay/: CMakeLists.txt
CMake/SceneLoaderUSD/: CMakeLists.txt
CMake/SpectraLUTGen/: CMakeLists.txt
CMake/Tests/: CMakeLists.txt  GenDeviceTests.cmake  GenTracerTests.cmake
CMake/Tests/TCore/: CMakeLists.txt
CMake/Tests/TDeviceCUDA/: CMakeLists.txt
CMake/Tests/TSceneLoaderMRay/: CMakeLists.txt
CMake/Tests/TTracerCPU/: CMakeLists.txt
CMake/Tests/TTracerCUDA/: CMakeLists.txt
CMake/Tracer/: CMakeLists.txt
CMake/TracerCPU/: CMakeLists.txt
CMake/TracerCUDA/: CMakeLists.txt
CMake/TracerCUDA/OptiX/: CMakeLists.txt
CMake/TracerDevice/: CMakeLists.txt
CMake/TracerDevice/OptiX/: CMakeLists.txt
CMake/TracerKernelGen/: CMakeLists.txt
CMake/TransientPool/: CMakeLists.txt
CMake/Visor/: CMakeLists.txt  SlangCompileSpirV.cmake
Docs/: conf.py  index.md  requirements.txt
Docs/_static/: cBox.frag  cBox.js  custom.css  mray_mermaid_init.js
Docs/_templates/: path_trace.html
Docs/markdown/: building.md  glossary.md  projectLayout.md  usage.md
Docs/scene/: scene.md
Resources/Fonts/: IcoMoonFontTable.h
Source/: cpp.hint  mray_cmake.h.in
Source/Common/: AnalyticStructs.h  JsonCommon.h  RenderImageStructs.h  TransferQueue.h
Source/CommonHeaders/: RenderImageStructs.h  TransferQueue.h
Source/Core/: AABB.h  AABB.hpp  Algorithm.h  BitFunctions.h  ColorFunctions.cpp  ColorFunctions.h  DataStructs.natvis  DataStructures.h  DataStructures.hpp  Definitions.h  DeviceVisit.h  Error.cpp  Error.h  Error.hpp  Expected.h  Filesystem.h  Flag.h  GraphicsFunctions.h  LinearAlg.h  Log.cpp  Log.h  MPMCQueue.h  MPMCQueueAtomic.h  MRayDataType.cpp  MRayDataType.h  MRayDescriptions.h  Map.h  Math.h  MathConstants.h  MathForward.h  MathFunctions.h  Matrix.h  Matrix.hpp  MemAlloc.cpp  MemAlloc.h  NamedEnum.h  NormConvFunctions.h  NormTypes.h  Profiling.h  Quaternion.h  (+29 more)
Source/Device/: AlgBinPartitionCUDA.h  AlgBinaryPartitionCUDA.h  AlgBinarySearchCUDA.h  AlgRadixSortCUDA.h  AlgReduceCUDA.h  AlgScanCUDA.h  AlgorithmsCUDA.h  DefinitionsCUDA.h  DeviceMemory.cpp  DeviceMemory.h  DeviceMemoryCUDA.cpp  DeviceMemoryCUDA.h  GPUAlgBinaryPartition.h  GPUAlgBinarySearch.h  GPUAlgForward.h  GPUAlgGeneric.h  GPUAlgRadixSort.h  GPUAlgReduce.h  GPUAlgScan.h  GPUAlgorithms.h  GPUAtomic.h  GPUDebug.h  GPUMemory.h  GPUSystem.h  GPUSystem.hpp  GPUSystemCUDA.cu  GPUSystemCUDA.h  GPUSystemCUDA.hpp  GPUSystemForward.h  GPUTexture.h  GPUTextureView.h  GPUTypes.h  GPUWarp.h  TextureCUDA.cpp  TextureCUDA.h  TextureCUDA.hpp  TextureViewCUDA.h  TexturesCUDA.h
Source/GFGConverter/: GFGConverter.cpp  GFGConverter.h
Source/ImageLoader/: DDSLoader.cpp  DDSLoader.h  EntryPoint.cpp  EntryPoint.h  ImageLoader.cpp  ImageLoader.h  ImageLoaderI.h  OIIOLoader.cpp
Source/MRay/: CommandI.h  ConvertCommand.cpp  ConvertCommand.h  QueryCommand.cpp  QueryCommand.h  RunCommand.cpp  RunCommand.h  TracerThread.cpp  TracerThread.h  TransferQueue.h  VisorCommand.cpp  VisorCommand.h  main.cpp
Source/MRayInput/: MRayInput.cpp  MRayInput.h  MRayInput.hpp
Source/MeshLoader/: EntryPoint.cpp  EntryPoint.h  MeshLoaderAssimp.cpp  MeshLoaderAssimp.h  MeshLoaderGFG.cpp  MeshLoaderGFG.h
Source/SceneLoaderMRay/: EntryPoint.cpp  EntryPoint.h  JsonNode.h  JsonNode.hpp  MeshLoaderJson.cpp  MeshLoaderJson.h  MeshLoaderMRayJson.cpp  MeshLoaderMRayJson.h  NodeNames.h  SceneLoaderMRay.cpp  SceneLoaderMRay.h
Source/SceneLoaderUSD/: EntryPoint.cpp  EntryPoint.h  MRayUSDTypes.h  MaterialProcessor.cpp  MaterialProcessor.h  MeshProcessor.cpp  MeshProcessor.h  SceneLoaderUSD.cpp  SceneLoaderUSD.h
Source/SpectraLUTGen/: main.cpp
Source/Tests/: GTestWrappers.h
Source/Tracer/: AcceleratorC.h  AcceleratorCommon.cu  AcceleratorInstance.h  AcceleratorLBVH.cu  AcceleratorLBVH.h  AcceleratorLBVH.hpp  AcceleratorLinear.cu  AcceleratorLinear.h  AcceleratorLinear.hpp  AcceleratorWork.h  AcceleratorWork.kt.h  AcceleratorWorkI.h  BCColorIO.h  Bitspan.h  CameraC.h  CamerasDefault.cpp  CamerasDefault.h  CamerasDefault.hpp  ColorConverter.cu  ColorConverter.h  ColorFunctions.h  CommonTexture.hpp  DistributionFunctions.h  Distributions.cu  Distributions.h  Filters.h  GenericGroup.cpp  GenericGroup.h  GenericGroup.hpp  GenericTexture.cpp  GenericTexture.hpp  GenericTextureRW.h  GraphicsFunctions.h  HashGrid.cu  HashGrid.h  HashGridRenderer.cu  HashGridRenderer.h  HashGridRendererShaders.h  Hit.h  (+101 more)
_sources/: index.md
_static/: cBox.js
markdown/: building.html  glossary.html  projectLayout.html  usage.html
(+196 files in other folders)
